[package]
name = "kasparustwallet"
version = "0.1.0"
edition = "2021"
description = "A Kaspa cryptocurrency wallet implementation in Rust"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
secp256k1 = { version = "0.27", features = ["std"] }
sha2 = "0.10"
blake2 = "0.10"
ripemd = "0.1"
bs58 = "0.5"
bech32 = "0.9"
kaspa-addresses = { git = "https://github.com/IgraLabs/rusty-kaspa.git", rev = "7d303eb" }
kaspa-consensus-core = { git = "https://github.com/IgraLabs/rusty-kaspa.git", rev = "7d303eb" }
kaspa-txscript = { git = "https://github.com/IgraLabs/rusty-kaspa.git", rev = "7d303eb" }
kaspa-rpc-core = { git = "https://github.com/IgraLabs/rusty-kaspa.git", rev = "7d303eb" }
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
hmac = "0.12"
itertools = "0.13"
clap = { version = "4.0", features = ["derive"] }
kaspa-hashes = { git = "https://github.com/IgraLabs/rusty-kaspa.git", rev = "7d303eb" }

[features]
default = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
